--- a/index.html
+++ b/index.html
@@ -2,6 +2,29 @@
 layout: default
 ---
 
+<!-- 
+TODO 
+-delete sections we don't want (also delete corresponding nav items)
+-update branding (Logo/favicon)
+-find out if he wants social medias then update/delete
+-figure out if he wants a form (if so need email to send form submissions to) 
+-add content 
+-figure out custom url
+- 
+
+
+
+
+
+
+
+
+
+
+
+
+-->
+
 <div class="home">
 
   <h1>Posts</h1>
